test/functions/bradc/paramThis/funParamThis2.chpl
proc param foo() {
  writeln("In foo() with (nonsensical) param this");
}

foo();
